# gateway_proxy_v3

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
scripts/: build_docker.sh  package.sh  run_claude.sh  run_docker.sh  run_podman.sh  run_server.sh  run_tests.sh  test_curl.sh
src/gateway_proxy/: bypass_client.py  config.py  converters.py  gemini_client.py  logger.py  main.py  models.py  tool_parser.py  user_logger.py  vllm_client.py
tests/: conftest.py  test_gateway_proxy.py  test_user_logger.py
