[project]
name = "llm-gateway"
version = "0.1.0"
description = "Production LLM Gateway for Claude Code + vLLM"
authors = [{name="Your Name"}]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
